--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "ip": "^2.0.1",
